// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddableComponent test camera add component workflow click arcballCameraController, add to inspector 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-sceneTree"
  >
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Name
        </div>
      </div>
      <div>
        <article
          className="wonder-string-input"
        >
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="camera"
          />
        </article>
      </div>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Transform
        </div>
      </div>
      <article
        className="wonder-inspector-transform"
      >
        <div
          className="transform-item"
        >
          <div
            className=""
          >
            position : 
          </div>
          <article
            className="wonder-transform-template"
          >
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                X : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Y : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Z : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="40"
              />
            </article>
          </article>
        </div>
        <div
          className="transform-item"
        >
          <div
            className=""
          >
            rotate : 
          </div>
          <article
            className="wonder-transform-template"
          >
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                X : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Y : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Z : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
          </article>
        </div>
        <div
          className="transform-item"
        >
          <div
            className=""
          >
            scale : 
          </div>
          <article
            className="wonder-transform-template"
          >
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                X : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="1"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Y : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="1"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Z : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="1"
              />
            </article>
          </article>
        </div>
      </article>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          BasicCameraView
        </div>
        <span
          className="header-close"
        >
          x
        </span>
      </div>
      <div>
        simulate basic camera view
      </div>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          PerspectiveCameraProjection
        </div>
        <span
          className="header-close"
        >
          x
        </span>
      </div>
      <div>
        simulate perspective camera view
      </div>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          ArcballCameraController
        </div>
        <span
          className="header-close"
        >
          x
        </span>
      </div>
      <article
        className="wonder-inspector-arcballCameraController"
      >
        <article
          className="wonder-float-input"
        >
          <span
            className="component-label"
          >
            distance : 
          </span>
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="10"
          />
        </article>
        <article
          className="wonder-float-input"
        >
          <span
            className="component-label"
          >
            min distance : 
          </span>
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="0.05"
          />
        </article>
      </article>
    </article>
    <article
      className="wonder-addable-component"
    >
      <div
        className="addable-component-content"
      >
        <button
          className="addable-btn"
          onClick={[Function]}
        >
          Add Component
        </button>
      </div>
    </article>
  </article>
</article>
`;

exports[`AddableComponent test camera add component workflow click the add component button, show addableComponent list 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-sceneTree"
  >
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Name
        </div>
      </div>
      <div>
        <article
          className="wonder-string-input"
        >
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="camera"
          />
        </article>
      </div>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Transform
        </div>
      </div>
      <article
        className="wonder-inspector-transform"
      >
        <div
          className="transform-item"
        >
          <div
            className=""
          >
            position : 
          </div>
          <article
            className="wonder-transform-template"
          >
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                X : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Y : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Z : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="40"
              />
            </article>
          </article>
        </div>
        <div
          className="transform-item"
        >
          <div
            className=""
          >
            rotate : 
          </div>
          <article
            className="wonder-transform-template"
          >
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                X : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Y : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Z : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
          </article>
        </div>
        <div
          className="transform-item"
        >
          <div
            className=""
          >
            scale : 
          </div>
          <article
            className="wonder-transform-template"
          >
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                X : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="1"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Y : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="1"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Z : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="1"
              />
            </article>
          </article>
        </div>
      </article>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          BasicCameraView
        </div>
        <span
          className="header-close"
        >
          x
        </span>
      </div>
      <div>
        simulate basic camera view
      </div>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          PerspectiveCameraProjection
        </div>
        <span
          className="header-close"
        >
          x
        </span>
      </div>
      <div>
        simulate perspective camera view
      </div>
    </article>
    <article
      className="wonder-addable-component"
    >
      <div
        className="addable-component-content"
      >
        <button
          className="addable-btn"
          onClick={[Function]}
        >
          Add Component
        </button>
        <div
          className="component-list"
        >
          <article
            className="wonder-addable-componentBox"
          >
            <div
              className="category-header"
              onClick={[Function]}
            >
              Mesh
            </div>
          </article>
          <article
            className="wonder-addable-componentBox"
          >
            <div
              className="category-header"
              onClick={[Function]}
            >
              Camera
            </div>
          </article>
          <article
            className="wonder-addable-componentBox"
          >
            <div
              className="category-header"
              onClick={[Function]}
            >
              Rendering
            </div>
          </article>
        </div>
      </div>
    </article>
  </article>
</article>
`;

exports[`AddableComponent test gameObject add component workflow click light component, add to inspector 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-sceneTree"
  >
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Name
        </div>
      </div>
      <div>
        <article
          className="wonder-string-input"
        >
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="cube"
          />
        </article>
      </div>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Transform
        </div>
      </div>
      <article
        className="wonder-inspector-transform"
      >
        <div
          className="transform-item"
        >
          <div
            className=""
          >
            position : 
          </div>
          <article
            className="wonder-transform-template"
          >
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                X : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Y : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Z : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
          </article>
        </div>
        <div
          className="transform-item"
        >
          <div
            className=""
          >
            rotate : 
          </div>
          <article
            className="wonder-transform-template"
          >
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                X : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Y : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Z : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
          </article>
        </div>
        <div
          className="transform-item"
        >
          <div
            className=""
          >
            scale : 
          </div>
          <article
            className="wonder-transform-template"
          >
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                X : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="1"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Y : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="1"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Z : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="1"
              />
            </article>
          </article>
        </div>
      </article>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Material
        </div>
        <span
          className="header-close"
        >
          x
        </span>
      </div>
      <article
        className="wonder-material"
      >
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              shader
            </span>
            <select
              onChange={[Function]}
              value="1"
            >
              <option
                value="0"
              >
                basic_material
              </option>
              <option
                value="1"
              >
                light_material
              </option>
            </select>
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-light-material"
          >
            <article
              className="wonder-material-color"
            >
              <div
                className=""
              >
                <span
                  className=""
                >
                  diffcuse color : 
                </span>
                <span
                  className=""
                >
                  #ffffff
                </span>
                <button
                  className=""
                  onClick={[Function]}
                >
                  pick color
                </button>
              </div>
            </article>
            <article
              className="wonder-material-texture"
            >
              <div
                className="texture_ground"
                onDragEnter={[Function]}
                onDragLeave={[Function]}
                onDragOver={[Function]}
                onDrop={[Function]}
                style={
                  Object {
                    "opacity": "1",
                  }
                }
              />
              <span
                className=""
              >
                diffuse map : 
              </span>
              <img
                src="./public/img/null.jpg"
              />
              <button
                className="texture_remove"
                onClick={[Function]}
              >
                remove
              </button>
            </article>
            <article
              className="wonder-light-shininess"
            >
              <article
                className="wonder-float-input"
              >
                <span
                  className="component-label"
                >
                  Shininess : 
                </span>
                <input
                  className="input-component float-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="text"
                  value="32"
                />
              </article>
            </article>
          </article>
        </div>
      </article>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          CustomGeometry
        </div>
        <span
          className="header-close"
        >
          x
        </span>
      </div>
      <div>
        simulate Geometry
      </div>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          MeshRenderer
        </div>
        <span
          className="header-close"
        >
          x
        </span>
      </div>
      <div>
        simulate Mesh Renderer
      </div>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Light
        </div>
        <span
          className="header-close"
        >
          x
        </span>
      </div>
      <article
        className="wonder-light"
      >
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              shader : 
            </span>
            <select
              onChange={[Function]}
              value="0"
            >
              <option
                value="0"
              >
                direction_light
              </option>
              <option
                value="1"
              >
                point_light
              </option>
            </select>
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-direction-light"
          >
            <article
              className="wonder-material-color"
            >
              <div
                className=""
              >
                <span
                  className=""
                >
                  color : 
                </span>
                <span
                  className=""
                >
                  #ffffff
                </span>
                <button
                  className=""
                  onClick={[Function]}
                >
                  pick color
                </button>
              </div>
            </article>
            <div
              className="light-intensity"
            >
              <article
                className="wonder-light-intensity"
              >
                <article
                  className="wonder-float-input"
                >
                  <span
                    className="component-label"
                  >
                    Intensity : 
                  </span>
                  <input
                    className="input-component float-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value="1"
                  />
                </article>
              </article>
            </div>
          </article>
        </div>
      </article>
    </article>
    <article
      className="wonder-addable-component"
    >
      <div
        className="addable-component-content"
      >
        <button
          className="addable-btn"
          onClick={[Function]}
        >
          Add Component
        </button>
      </div>
    </article>
  </article>
</article>
`;

exports[`AddableComponent test gameObject add component workflow click the add component button, show addableComponent list 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-sceneTree"
  >
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Name
        </div>
      </div>
      <div>
        <article
          className="wonder-string-input"
        >
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="cube"
          />
        </article>
      </div>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Transform
        </div>
      </div>
      <article
        className="wonder-inspector-transform"
      >
        <div
          className="transform-item"
        >
          <div
            className=""
          >
            position : 
          </div>
          <article
            className="wonder-transform-template"
          >
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                X : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Y : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Z : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
          </article>
        </div>
        <div
          className="transform-item"
        >
          <div
            className=""
          >
            rotate : 
          </div>
          <article
            className="wonder-transform-template"
          >
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                X : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Y : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Z : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
          </article>
        </div>
        <div
          className="transform-item"
        >
          <div
            className=""
          >
            scale : 
          </div>
          <article
            className="wonder-transform-template"
          >
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                X : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="1"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Y : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="1"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Z : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="1"
              />
            </article>
          </article>
        </div>
      </article>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Material
        </div>
        <span
          className="header-close"
        >
          x
        </span>
      </div>
      <article
        className="wonder-material"
      >
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              shader
            </span>
            <select
              onChange={[Function]}
              value="1"
            >
              <option
                value="0"
              >
                basic_material
              </option>
              <option
                value="1"
              >
                light_material
              </option>
            </select>
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-light-material"
          >
            <article
              className="wonder-material-color"
            >
              <div
                className=""
              >
                <span
                  className=""
                >
                  diffcuse color : 
                </span>
                <span
                  className=""
                >
                  #ffffff
                </span>
                <button
                  className=""
                  onClick={[Function]}
                >
                  pick color
                </button>
              </div>
            </article>
            <article
              className="wonder-material-texture"
            >
              <div
                className="texture_ground"
                onDragEnter={[Function]}
                onDragLeave={[Function]}
                onDragOver={[Function]}
                onDrop={[Function]}
                style={
                  Object {
                    "opacity": "1",
                  }
                }
              />
              <span
                className=""
              >
                diffuse map : 
              </span>
              <img
                src="./public/img/null.jpg"
              />
              <button
                className="texture_remove"
                onClick={[Function]}
              >
                remove
              </button>
            </article>
            <article
              className="wonder-light-shininess"
            >
              <article
                className="wonder-float-input"
              >
                <span
                  className="component-label"
                >
                  Shininess : 
                </span>
                <input
                  className="input-component float-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="text"
                  value="32"
                />
              </article>
            </article>
          </article>
        </div>
      </article>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          CustomGeometry
        </div>
        <span
          className="header-close"
        >
          x
        </span>
      </div>
      <div>
        simulate Geometry
      </div>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          MeshRenderer
        </div>
        <span
          className="header-close"
        >
          x
        </span>
      </div>
      <div>
        simulate Mesh Renderer
      </div>
    </article>
    <article
      className="wonder-addable-component"
    >
      <div
        className="addable-component-content"
      >
        <button
          className="addable-btn"
          onClick={[Function]}
        >
          Add Component
        </button>
        <div
          className="component-list"
        >
          <article
            className="wonder-addable-componentBox"
          >
            <div
              className="category-header"
              onClick={[Function]}
            >
              Mesh
            </div>
          </article>
          <article
            className="wonder-addable-componentBox"
          >
            <div
              className="category-header"
              onClick={[Function]}
            >
              Camera
            </div>
          </article>
          <article
            className="wonder-addable-componentBox"
          >
            <div
              className="category-header"
              onClick={[Function]}
            >
              Rendering
            </div>
          </article>
        </div>
      </div>
    </article>
  </article>
</article>
`;

exports[`AddableComponent test show component else else if currentSceneTreeNode is box, should show transform and material 1`] = `
<article
  className="wonder-inspector-component"
/>
`;

exports[`AddableComponent test show component else if currentSceneTreeNode is camera, should show transform and basicCameraView and perspectiveCameraProjection 1`] = `
<article
  className="wonder-inspector-component"
/>
`;

exports[`AddableComponent test show component if hasn't currentSceneTreeNode, show nothing 1`] = `
<article
  className="wonder-inspector-component"
/>
`;
